[project]
name = "iamcompact-harmonization-d4-4"
version = "0.1.0"
description = "Package for producing harmonized datasets in deliverable D4.4 of the Horizon Europe project IAM COMPACT"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iamcompact_harmonization_d4_4"]
