[project]
name = "iamcompact-harmonization-d44"
version = "0.1.0"
description = "Package for producing harmonized datasets in deliverable D4.4 of the Horizon Europe project IAM COMPACT"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
dependencies = [
    "intake>=2.0.6",
    "polars[calamine,openpyxl]>=1.2.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iamcompact_harmonization_d4_4"]
