[project]
name = "iamcompact-harmonization-d44"
version = "0.1.0"
description = "Package for producing harmonized datasets in deliverable D4.4 of the Horizon Europe project IAM COMPACT"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
dependencies = [
    "intake>=2.0.6",
    "fsspec>=2024.6.1",
    "requests>=2.32.3",
    "aiohttp>=3.9.5",
    "polars>=1.2.1",
    "python-calamine>=0.2.3",
    "openpyxl>=3.1.5",
    "fastexcel>=0.11.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.26.0",
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iamcompact_harmonization_d4_4"]
